# qtmonaco

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  pyproject.toml  vite.config.ts
.github/workflows/: ci.yml  semantic_release.yml
backend/: index.html  package.json
backend/src/: lsp.ts  main.ts  monaco-vim.d.ts  providers.ts  snippets.ts  style.css
qtmonaco/: generate_rcc.py  monaco.py  pylsp_provider.py  pyproject.toml
qtmonaco/qtmonaco/: __init__.py  editor_bridge.py  platform_resources.py  resource_loader.py
src/: main.ts  monaco-vim.d.ts  style.css
tests/: test_monaco.py
