[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qtmonaco"
version = "0.1.0"
description = "Qt Monaco is a Python library for working with the Monaco Editor in Qt applications."
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "PySide6~=6.8.2",
    "qtpy~=2.4",
    "python-lsp-server[all,websockets] ~= 1.12",
]

[project.optional-dependencies]
dev = [
    "coverage~=7.0",
    "isort~=5.13, >=5.13.2",
    "pytest-qt~=4.4",
    "pytest-random-order~=1.1",
    "pytest-timeout~=2.2",
    "pytest-xvfb~=3.0",
    "pytest~=8.0",
    "pytest-cov~=6.1.1",
]

[project.urls]
"Bug Tracker" = "https://github.com/bec-project/qtmonaco/issues"
Homepage = "https://github.com/bec-project/qtmonaco"

[tool.hatch.build.targets.wheel]
include = ["*"]
exclude = ["docs/**", "tests/**"]

[tool.hatch.build.targets.sdist]
include = ["*"]
exclude = ["docs/**", "tests/**"]
